@@ -687,7 +687,7 @@ $_SESSION[$guid]['stringReplacement'] = array();
 																	}
 																	$uri_parts = explode('?', $_SERVER['REQUEST_URI'], 2);
 																	?>
-																<input name="<?php echo $row['name'] ?>" id="<?php echo $row['name'] ?>" maxlength=50 value="<?php echo $pageURL.$_SERVER['SERVER_NAME'].$port.substr($uri_parts[0], 0, -22) ?>" type="text" class="standardWidth">
+																<input name="<?php echo $row['name'] ?>" id="<?php echo $row['name'] ?>" maxlength=100 value="<?php echo $pageURL.$_SERVER['SERVER_NAME'].$port.substr($uri_parts[0], 0, -22) ?>" type="text" class="standardWidth">
 																<script type="text/javascript">
 																	var <?php echo $row['name'] ?>=new LiveValidation('<?php echo $row['name'] ?>');
 																	<?php echo $row['name'] ?>.add(Validate.Presence);
@@ -715,7 +715,7 @@ $_SESSION[$guid]['stringReplacement'] = array();
                                                 				?></span>
 															</td>
 															<td stclass="right">
-																<input name="<?php echo $row['name'] ?>" id="<?php echo $row['name'] ?>" maxlength=50 value="<?php echo substr(__FILE__, 0, -22) ?>" type="text" class="standardWidth">
+																<input name="<?php echo $row['name'] ?>" id="<?php echo $row['name'] ?>" maxlength=100 value="<?php echo substr(__FILE__, 0, -22) ?>" type="text" class="standardWidth">
 																<script type="text/javascript">
 																	var <?php echo $row['name'] ?>=new LiveValidation('<?php echo $row['name'] ?>');
 																	<?php echo $row['name'] ?>.add(Validate.Presence);
